k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: glamdrop
  labels:
    name: glamdrop
    app.kubernetes.io/name: glamdrop
